--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
 
     <application
-        android:label="AlSaqr"
+        android:label="SJS_ESS"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
