--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "alsaqr",
-    "short_name": "alsaqr",
+    "name": "sjs_ess",
+    "short_name": "sjs_ess",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
